feat(security): implement advanced enterprise security mechanics
- Added Bucket4j dependency for Rate Limiting at the /api/v1/auth/signin endpoint to mitigate brute force attacks (10 req/min).
- Implemented Account Lockout logic tracking failedLoginAttempts, automatically locking users out for 15 minutes after 5 consecutive failures.
- Mitigated username enumeration vulnerabilities by silently catching ResourceNotFoundException during the authentication process.
- Configured JPA Auditing globally, introducing @CreatedDate and @LastModifiedDate to BaseEntity for automatic timestamping.
- Hardened Web Security with a strict CORS configuration source and Content Security Policy (CSP), replacing legacy XSS/Frame protection.
- Resolved multiple SonarQube code smells, including migrating JWT generation to the modern java.time API, refactoring AuthController complexity, and fixing checkin package casing issues.