@@ -3,7 +3,7 @@ package org.springframework.samples.petclinic.configuration.jwt;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.time.Instant;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -16,11 +16,13 @@ import org.springframework.stereotype.Component;
 import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.MalformedJwtException;
-import io.jsonwebtoken.SignatureAlgorithm;
-import io.jsonwebtoken.SignatureException;
 import io.jsonwebtoken.UnsupportedJwtException;
+import io.jsonwebtoken.security.Keys;
+import io.jsonwebtoken.security.SignatureException;
+import java.security.Key;
 
 @Component
+@SuppressWarnings("java:S2143") // JJWT requires java.util.Date
 public class JwtUtils {
 	private static final Logger logger = LoggerFactory.getLogger(JwtUtils.class);
 
@@ -30,33 +32,39 @@ public class JwtUtils {
 	@Value("${petclinic.app.jwtExpirationMs}")
 	private int jwtExpirationMs;
 
+	private Key getSigningKey() {
+		return Keys.hmacShaKeyFor(jwtSecret.getBytes());
+	}
+
 	public String generateJwtToken(Authentication authentication) {
 
 		UserDetailsImpl userPrincipal = (UserDetailsImpl) authentication.getPrincipal();
 		Map<String, Object> claims = new HashMap<>();
 		claims.put("authorities",
-				userPrincipal.getAuthorities().stream().map(auth -> auth.getAuthority()).collect(Collectors.toList()));
+				userPrincipal.getAuthorities().stream().map(auth -> auth.getAuthority()).toList());
 
-		return Jwts.builder().setClaims(claims).setSubject((userPrincipal.getUsername())).setIssuedAt(new Date())
-				.setExpiration(new Date((new Date()).getTime() + jwtExpirationMs))
-				.signWith(SignatureAlgorithm.HS512, jwtSecret).compact();
+		Instant now = Instant.now();
+		return Jwts.builder().setClaims(claims).setSubject((userPrincipal.getUsername())).setIssuedAt(Date.from(now))
+				.setExpiration(Date.from(now.plusMillis(jwtExpirationMs)))
+				.signWith(getSigningKey()).compact();
 	}
 
 	public String generateTokenFromUsername(String username, Authorities authority) {
 		Map<String, Object> claims = new HashMap<>();
 		claims.put("authorities", authority.getAuthority());
-		return Jwts.builder().setClaims(claims).setSubject(username).setIssuedAt(new Date())
-				.setExpiration(new Date((new Date()).getTime() + jwtExpirationMs))
-				.signWith(SignatureAlgorithm.HS512, jwtSecret).compact();
+		Instant now = Instant.now();
+		return Jwts.builder().setClaims(claims).setSubject(username).setIssuedAt(Date.from(now))
+				.setExpiration(Date.from(now.plusMillis(jwtExpirationMs)))
+				.signWith(getSigningKey()).compact();
 	}
 
 	public String getUserNameFromJwtToken(String token) {
-		return Jwts.parser().setSigningKey(jwtSecret).parseClaimsJws(token).getBody().getSubject();
+		return Jwts.parserBuilder().setSigningKey(getSigningKey()).build().parseClaimsJws(token).getBody().getSubject();
 	}
 
 	public boolean validateJwtToken(String authToken) {
 		try {
-			Jwts.parser().setSigningKey(jwtSecret).parseClaimsJws(authToken);
+			Jwts.parserBuilder().setSigningKey(getSigningKey()).build().parseClaimsJws(authToken);
 			return true;
 		} catch (SignatureException e) {
 			logger.error("Invalid JWT signature: {}", e.getMessage());
